MAPREDUCE-2156. Raid-aware FSCK. (Patrick Kling via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1041702 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2172. Added test-patch.properties required by test-patch.sh (nigel)
 
+    MAPREDUCE-2156. Raid-aware FSCK. (Patrick Kling via dhruba)
+
   OPTIMIZATIONS
 
   BUG FIXES
