HDFS-1502. TestBlockRecovery triggers NPE in assert. Contributed by Hairong Kuang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1042517 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -426,6 +426,8 @@ Release 0.22.0 - Unreleased
 
     HDFS-1523. TestLargeBlock is failing on trunk. (cos)
 
+    HDFS-1502. TestBlockRecovery triggers NPE in assert. (hairong via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
