HDFS-1532. Exclude Findbugs warning in FSImageFormat$Saver. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1043301 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -428,6 +428,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1502. TestBlockRecovery triggers NPE in assert. (hairong via cos)
 
+    HDFS-1532. Exclude Findbugs warning in FSImageFormat$Saver. (Todd Lipcon
+    via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
