HDFS-1527. SocketOutputStream.transferToFully fails for blocks >= 2GB on 32 bit JVM. Contributed by Patrick Kling.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1043308 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -431,6 +431,9 @@ Release 0.22.0 - Unreleased
     HDFS-1532. Exclude Findbugs warning in FSImageFormat$Saver. (Todd Lipcon
     via cos)
 
+    HDFS-1527. SocketOutputStream.transferToFully fails for blocks >= 2GB on
+    32 bit JVM. (Patrick Kling via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
