HDFS-613. TestBalancer and TestBlockTokenWithDFS fail Balancer assert. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1044102 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -437,6 +437,9 @@ Release 0.22.0 - Unreleased
     HDFS-1531. Clean up stack traces due to duplicate MXBean registration.
     (Todd Lipcon via cos)
 
+    HDFS-613. TestBalancer and TestBlockTokenWithDFS fail Balancer assert.
+    (Todd Lipcon via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
