HDFS-1533. A more elegant FileSystem#listCorruptFileBlocks API (HDFS portion). Contributed by Patrick Kling.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1044166 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,9 @@ Trunk (unreleased changes)
 
     HDFS-1506. Refactor fsimage loading code. (hairong)
 
+    HDFS-1533. A more elegant FileSystem#listCorruptFileBlocks API
+    (HDFS portion) (Patrick Kling via hairong)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
