MAPREDUCE-2215. A more elegant FileSystem#listCorruptFileBlocks API (RAID changes). Contributed by Patrick Kling.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1044176 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2156. Raid-aware FSCK. (Patrick Kling via dhruba)
 
+    MAPREDUCE-2215. A more elegant FileSystem#listCorruptFileBlocks API
+    (RAID changes) (Patrick Kling via hairong)
+
   OPTIMIZATIONS
 
   BUG FIXES
