MAPREDUCE-1334. Fix TestIndexUpdater by ignoring _SUCCESS file in HDFS. Contributed by Kay Kay.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1044197 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2155. RaidNode should optionally use the mapreduce jobs to 
     fix missing blocks.  (Patrick Kling via dhruba)
 
+    MAPREDUCE-1334. Fix TestIndexUpdater by ignoring _SUCCESS file in HDFS.
+    (Kay Kay via yhemanth)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
