HDFS-1377. Quota bug for partial blocks allows quotas to be violated.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1044218 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1474,3 +1474,5 @@ Release 0.20.1 - 2009-09-01
 
     HDFS-761. Fix failure to process rename operation from edits log due to 
     quota verification. (suresh)
+    
+    HDFS-1377. Quota bug for partial blocks allows quotas to be violated. (eli)
