MAPREDUCE-1831. BlockPlacement policy for HDFS-RAID. (Scott Chen via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1044523 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2215. A more elegant FileSystem#listCorruptFileBlocks API
     (RAID changes) (Patrick Kling via hairong)
 
+    MAPREDUCE-1831. BlockPlacement policy for HDFS-RAID.
+    (Scott Chen via dhruba)
+
   OPTIMIZATIONS
 
   BUG FIXES
