HDFS-1526. Dfs client name for a map/reduce task should be unique among threads. Contributed by Hairong Kuang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1049193 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Trunk (unreleased changes)
 
   INCOMPATIBLE CHANGES
 
+    HDFS-1526. Dfs client name for a map/reduce task should be unique
+    among threads. (hairong)
+
   NEW FEATURES
 
     HDFS-1482. Add listCorruptFileBlocks to DistributedFileSystem.
