Update change log for HDFS-1360
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1049299 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -37,6 +37,8 @@ Trunk (unreleased changes)
   BUG FIXES
 
     HDFS-1516. mvn-install is broken after 0.22 branch creation. (cos)
+    HDFS-1360. TestBlockRecovery should bind ephemeral ports.
+    (Todd Lipcon via hairong)
 
 Release 0.22.0 - Unreleased
 
