HDFS-1206. TestFiHFlush fails intermittently. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1050109 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -451,6 +451,8 @@ Release 0.22.0 - Unreleased
     HDFS-613. TestBalancer and TestBlockTokenWithDFS fail Balancer assert.
     (Todd Lipcon via cos)
 
+    HDFS-1206. TestFiHFlush fails intermittently. (cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
