--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -37,8 +37,12 @@ Trunk (unreleased changes)
   BUG FIXES
 
     HDFS-1516. mvn-install is broken after 0.22 branch creation. (cos)
+
     HDFS-1360. TestBlockRecovery should bind ephemeral ports.
     (Todd Lipcon via hairong)
+
+    HDFS-1511. 98 Release Audit warnings on trunk and branch-0.22.
+    (jghoman)
 
 Release 0.22.0 - Unreleased
 
