HDFS-1551. Fix pom templates dependency list. Contributed by Giridharan Kesavan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1051644 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -41,6 +41,8 @@ Trunk (unreleased changes)
     HDFS-1360. TestBlockRecovery should bind ephemeral ports.
     (Todd Lipcon via hairong)
 
+    HDFS-1551. Fix pom templates dependency list (gkesavan)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
