HDFS-1534. Fix some incorrect logs in FSDirectory. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1051669 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,6 +29,8 @@ Trunk (unreleased changes)
     HDFS-1476. listCorruptFileBlocks should be functional while the
     name node is in safe mode. (Patrick Kling via hairong)
 
+    HDFS-1534. Fix some incorrect logs in FSDirectory. (eli)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
