MAPREDUCE-2223. TestMRCLI might fail on Ubuntu with default /etc/hosts. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1052106 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -475,6 +475,9 @@ Release 0.21.1 - Unreleased
     MAPREDUCE-1809. Ant build changes for Streaming system tests in contrib
     projects. (Vinay Kumar Thota via amareshwari)
 
+    MAPREDUCE-2223. TestMRCLI might fail on Ubuntu with default /etc/hosts
+    (cos)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
