HDFS-1559. Add missing UGM overrides to TestRefreshUserMappings. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1052823 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -45,6 +45,9 @@ Trunk (unreleased changes)
 
     HDFS-1551. Fix pom templates dependency list (gkesavan)
 
+    HDFS-1559. Add missing UGM overrides to TestRefreshUserMappings
+    (Todd Lipcon via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
