--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -36,6 +36,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1334. Fix TestIndexUpdater by ignoring _SUCCESS file in HDFS.
     (Kay Kay via yhemanth)
 
+    MAPREDUCE-2232. Add missing methods to TestMapredGroupMappingServiceRefresh.
+    (Todd Lipcon via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
