MAPREDUCE-2224. Fix synchronization bugs in JvmManager. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1053263 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -451,6 +451,8 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-1783. FairScheduler initializes tasks only when the job can be
     run. (Ramkumar Vadali via schen)
 
+    MAPREDUCE-2224. Fix synchronization bugs in JvmManager. (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
