MAPREDUCE-714. JobConf.findContainingJar unescapes unnecessarily on linux. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1053730 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -453,6 +453,8 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2224. Fix synchronization bugs in JvmManager. (todd)
 
+    MAPREDUCE-714. JobConf.findContainingJar unescapes unnecessarily on linux (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
