MAPREDUCE-1906. Lower minimum heartbeat interval for TaskTracker. Contributed by Scott Carey and Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1054154 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1831. BlockPlacement policy for HDFS-RAID.
     (Scott Chen via dhruba)
 
+    MAPREDUCE-1906. Lower minimum heartbeat interval for TaskTracker
+    (Scott Carey and Todd Lipcon via todd)
+
   OPTIMIZATIONS
 
   BUG FIXES
