HDFS-1540. Make Datanode handle errors from RPC calls to namenode more elegantly. (dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1054544 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,9 @@ Trunk (unreleased changes)
     HDFS-1509. A savenamespace command writes the fsimage and edits into
     all configured directories. (dhruba)
 
+    HDFS-1540. Make Datanode handle errors from RPC calls to namenode
+    more elegantly. (dhruba)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
