MAPREDUCE-2228. Remove java5 dependencies from build. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1054873 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -488,6 +488,8 @@ Release 0.21.1 - Unreleased
     MAPREDUCE-2223. TestMRCLI might fail on Ubuntu with default /etc/hosts
     (cos)
 
+    MAPREDUCE-2228. Remove java5 dependencies from build. (cos)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
