HDFS-1463. Accesstime of a file is not updated in safeMode. (dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1055973 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -57,6 +57,8 @@ Trunk (unreleased changes)
     HDFS-1540. Make Datanode handle errors from RPC calls to namenode
     more elegantly. (dhruba)
 
+    HDFS-1463. Accesstime of a file is not updated in safeMode. (dhruba)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
