JobTracker should not try to remove mapred.system.dir during startup. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1056163 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -463,6 +463,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2234. If Localizer can't create task log directory, it should fail
     on the spot. (todd)
 
+    MAPREDUCE-2219. JobTracker should not try to remove mapred.system.dir
+    during startup. (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
