HDFS-1504. FSImageSaver should catch all exceptions, not just IOE. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1056206 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -481,6 +481,8 @@ Release 0.22.0 - Unreleased
     HDFS-1542. Add test for HADOOP-7082, a deadlock writing Configuration to
     HDFS. (todd)
 
+    HDFS-1504. FSImageSaver should catch all exceptions, not just IOE. (todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
