MAPREDUCE-1929. Allow artifacts to be published to the staging Apache Nexus Maven Repository.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1057806 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -505,6 +505,9 @@ Release 0.21.1 - Unreleased
 
     MAPREDUCE-2228. Remove java5 dependencies from build. (cos)
 
+    MAPREDUCE-1929. Allow artifacts to be published to the staging Apache Nexus
+    Maven Repository. (tomwhite)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
