MAPREDUCE-2248. DistributedRaidFileSystem should unraid only the corrupt block (Ramkumar Vadali via schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1058374 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -473,6 +473,9 @@ Release 0.22.0 - Unreleased
     classes themselves are already deprecated. This removes an Eclipse error.
     (tomwhite via nigel)
 
+    MAPREDUCE-2248. DistributedRaidFileSystem should unraid only the corrupt
+    block (Ramkumar Vadali via schen)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
