HDFS-884. DataNode throws IOException if all data directories are unavailable. Contributed by Steve Loughran and Konstantin Shvachko.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1058402 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -485,6 +485,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1504. FSImageSaver should catch all exceptions, not just IOE. (todd)
 
+    HDFS-884. DataNode throws IOException if all data directories are 
+    unavailable. (Steve Loughran and shv)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
