HDFS-996. JUnit tests should never depend on anything in conf. Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1059508 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -522,6 +522,8 @@ Release 0.21.1 - Unreleased
 
     HDFS-1552. Remove java5 dependencies from build. (cos) 
 
+    HDFS-996. JUnit tests should never depend on anything in conf (cos)
+
   INCOMPATIBLE CHANGES
 
     HDFS-538. Per the contract elucidated in HADOOP-6201, throw
