HDFS-1585. Fix build after HDFS-1547. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1061067 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -63,6 +63,8 @@ Trunk (unreleased changes)
 
     HDFS-1463. Accesstime of a file is not updated in safeMode. (dhruba)
 
+    HDFS-1585. Fix build after HDFS-1547 (todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
