--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,9 @@ Trunk (unreleased changes)
     HDFS-1482. Add listCorruptFileBlocks to DistributedFileSystem.
     (Patrick Kling via hairong)
 
+    HDFS-1448. Add a new tool Offline Edits Viewer (oev).  (Erik Steffl
+    via szetszwo)
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
