MAPREDUCE-2282. Fix TestMRServerPorts for the changes in TestHDFSServerPorts.  Contributed by shv
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1062282 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -481,6 +481,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-1085. For tasks, "ulimit -v -1" is being run when user doesn't
     specify a ulimit (todd)
 
+    MAPREDUCE-2282. Fix TestMRServerPorts for the changes in
+    TestHDFSServerPorts.  (shv via szetszwo)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
