MAPREDUCE-1382. MRAsyncDiscService should tolerate missing local.dir. Contributed by Zheng Shao and tomwhite.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1063044 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1906. Lower minimum heartbeat interval for TaskTracker
     (Scott Carey and Todd Lipcon via todd)
 
+    MAPREDUCE-1382. MRAsyncDiscService should tolerate missing local.dir.
+    (Zheng Shao and tomwhite via tomwhite)
+
   OPTIMIZATIONS
 
   BUG FIXES
