MAPREDUCE-2250. Fix logging in raid code. (Ramkumar Vadali via schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1063053 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -228,6 +228,8 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2180. Add coverage of fair scheduler servlet to system test (todd)
 
+    MAPREDUCE-2250. Fix logging in raid code. (Ramkumar Vadali via schen)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
