MAPREDUCE-2277. TestCapacitySchedulerWithJobTracker needs to wait for jobs to complete before testing status. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1063503 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -492,6 +492,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2238. Fix permissions handling to avoid leaving undeletable directories
     in local dirs. (todd)
 
+    MAPREDUCE-2277. TestCapacitySchedulerWithJobTracker needs to wait for jobs to
+    complete before testing status. (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
