MAPREDUCE-2271. Fix TestSetupTaskScheduling failure on trunk. Contributed by Liyin Liang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1063811 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -45,6 +45,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2232. Add missing methods to TestMapredGroupMappingServiceRefresh.
     (Todd Lipcon via eli)
 
+    MAPREDUCE-2271. Fix TestSetupTaskScheduling failure on trunk.
+    (Liyin Liang via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
