MAPREDUCE-2253. Servlets should specify content type. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1063846 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -498,6 +498,8 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2277. TestCapacitySchedulerWithJobTracker needs to wait for jobs to
     complete before testing status. (todd)
 
+    MAPREDUCE-2253. Servlets should specify content type (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
