MAPREDUCE-2283. Add timeout for Raid Tests (Ramkumar Vadali via schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1064287 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2271. Fix TestSetupTaskScheduling failure on trunk.
     (Liyin Liang via todd)
 
+    MAPREDUCE-2283. Add timeout for Raid Tests (Ramkumar Vadali via schen)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
