--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,8 +48,6 @@ Trunk (unreleased changes)
     MAPREDUCE-2271. Fix TestSetupTaskScheduling failure on trunk.
     (Liyin Liang via todd)
 
-    MAPREDUCE-2283. Add timeout for Raid Tests (Ramkumar Vadali via schen)
-
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
@@ -501,6 +499,11 @@ Release 0.22.0 - Unreleased
     complete before testing status. (todd)
 
     MAPREDUCE-2253. Servlets should specify content type (todd)
+
+    MAPREDUCE-2283. Add timeout for Raid Tests (Ramkumar Vadali via schen)
+
+    MAPREDUCE-1754. Replace mapred.persmissions.supergroup with an 
+    acl : mapreduce.cluster.administrators (Amareshwari Sriramadasu via shv)
 
 Release 0.21.1 - Unreleased
 
