HDFS-1335. HDFS side of HADOOP-6904: RPC compatibility. Contributed by Hairong Kuang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1064922 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -47,6 +47,8 @@ Trunk (unreleased changes)
     HDFS-1588. Remove hardcoded strings for configuration keys, "dfs.hosts"
     and "dfs.hosts.exlude". (Erik Steffl via suresh)
 
+    HDFS-1335. HDFS side change of HADDOP-6904: RPC compatibility. (hairong)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
