MAPREDUCE-2263. MapReduce side of HADOOP-6904: RPC compatibility. Contributed by Hairong Kuang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1064923 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1382. MRAsyncDiscService should tolerate missing local.dir.
     (Zheng Shao and tomwhite via tomwhite)
 
+    MAPREDUCE-2263. MapReduce side of HADOOP-6904: RPC compatibility.
+    (hairong)
+
   OPTIMIZATIONS
 
   BUG FIXES
