MAPREDUCE-2290. Fix compilation error in TestTaskCommit. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1064970 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2271. Fix TestSetupTaskScheduling failure on trunk.
     (Liyin Liang via todd)
 
+    MAPREDUCE-2290. Fix compilation error in TestTaskCommit. (eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
