HDFS-863. Potential deadlock in TestOverReplicatedBlocks. Contributed by Ken Goodhope.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1065845 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -76,6 +76,9 @@ Trunk (unreleased changes)
 
     HDFS-1585. Fix build after HDFS-1547 (todd)
 
+    HDFS-863. Potential deadlock in TestOverReplicatedBlocks. 
+    (Ken Goodhope via jghoman)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
