--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -298,6 +298,8 @@ Release 0.22.0 - Unreleased
     HDFS-1473. Refactor storage management into separate classes than fsimage
     file reading/writing. (Todd Lipcon via eli)
 
+    HDFS-1582. Remove auto-generated native build files. (rvs via eli)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
