MAPREDUCE-2260. Remove auto-generated native build files. Contributed by Roman Shaposhnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1065861 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -238,6 +238,8 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2250. Fix logging in raid code. (Ramkumar Vadali via schen)
 
+    MAPREDUCE-2260. Remove auto-generated native build files. (rvs via eli)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
