MAPREDUCE-2294. Fix compilation error in mumak. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1066250 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -53,6 +53,8 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2290. Fix compilation error in TestTaskCommit. (eli)
 
+    MAPREDUCE-2294. Fix compilation error in mumak. (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
