HDFS-1557. Separate Storage from FSImage. Contributed by Ivan Kelly.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1066305 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -49,6 +49,8 @@ Trunk (unreleased changes)
 
     HDFS-1335. HDFS side change of HADDOP-6904: RPC compatibility. (hairong)
 
+    HDFS-1557. Separate Storage from FSImage. (Ivan Kelly via jitendra)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
