MAPREDUCE-2026. Make JobTracker.getJobCounters() and JobInProgress.getCounters() aquire locks in a shorter time period. (Joydeep Sen Sarma via schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1066929 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,10 @@ Trunk (unreleased changes)
     (hairong)
 
   OPTIMIZATIONS
+    
+    MAPREDUCE-2026. Make JobTracker.getJobCounters() and
+    JobInProgress.getCounters() aquire locks in a shorter time period.
+    (Joydeep Sen Sarma via schen)
 
   BUG FIXES
 
