MAPREDUCE-2300. Fix TestUmbilicalProtocolWithJobToken on trunk after HADOOP-6904. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1066973 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -59,6 +59,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2294. Fix compilation error in mumak. (todd)
 
+    MAPREDUCE-2300. Fix TestUmbilicalProtocolWithJobToken on trunk after
+    HADOOP-6904. (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
