HDFS-1607. Fix referenced to misspelled method name getProtocolSigature. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1066986 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,9 @@ Trunk (unreleased changes)
     HDFS-1610. Fix TestClientProtocolWithDelegationToken and TestBlockToken
     on trunk after HADOOP-6904 (todd)
 
+    HDFS-1607. Fix referenced to misspelled method name getProtocolSigature
+    (todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
