MAPREDUCE-2296. Fix references to misspelled method name getProtocolSigature. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1066988 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -59,6 +59,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2300. Fix TestUmbilicalProtocolWithJobToken on trunk after
     HADOOP-6904. (todd)
 
+    MAPREDUCE-2296. Fix references to misspelled method name
+    getProtocolSigature (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
